made general changes

--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
       <h1 class="project-heading">some of my projects</h1>
       <div class="project-container">
         <div class="project-card">
-          <img src="img/project1.webp" class="project-img" alt="" />
+          <img
+            src="img/Demo business page html.png"
+            class="project-img"
+            alt=""
+          />
           <div class="project-content">
-            <h1 class="project-title">HTML FOOD PAGE</h1>
+            <h1 class="project-title">BUSINESS PAGE</h1>
             <p class="project-info">
               Built a responsive food page using Html for structure and custom
               Css for styling of the project.
@@ -49,12 +53,12 @@
         </div>
 
         <div class="project-card">
-          <img src="img/project2.webp" class="project-img" alt="" />
+          <img src="img/Foodstore html_1.png" class="project-img" alt="" />
           <div class="project-content">
-            <h1 class="project-title">HTML BLOG</h1>
+            <h1 class="project-title">FOOS STOE PAGE</h1>
             <p class="project-info">
-              Built a custom blog site using Html for the structing and custom
-              Css for styling.
+              Built a custom Foodstore page using Html for the structuring and
+              custom Css for styling..
             </p>
             <div class="project-btn-grp">
               <button class="project-btn github" id="blog">github repo</button>
@@ -64,15 +68,12 @@
         </div>
 
         <div class="project-card">
-          <img src="img/project1.webp" class="project-img" alt="" />
+          <img src="img/Toy-store html_1.png" class="project-img" alt="" />
           <div class="project-content">
-            <h1 class="project-title">
-              Expense Tracker
-            </h1>
+            <h1 class="project-title">TOY STORE PAGE</h1>
             <p class="project-info">
-              Implemented an expense tracker web app that calculates the
-              expenses made by it's user. This project was completed using Html,
-              Css and Javascript.
+              Built a custom toyStore page using Html for the structuring and
+              custom Css for styling.
             </p>
             <div class="project-btn-grp">
               <button class="project-btn github" id="tracker">
@@ -84,12 +85,12 @@
         </div>
 
         <div class="project-card">
-          <img src="img/project2.webp" class="project-img" alt="" />
+          <img src="img/Demo blog site Html.png" class="project-img" alt="" />
           <div class="project-content">
-            <h1 class="project-title">React Food Delivery Site</h1>
+            <h1 class="project-title">HTML/CSS BLOG</h1>
             <p class="project-info">
-              Implemented the client side of this project using Reactjs and
-              custom Css properties for styling.
+              Built a custom blog site using Html for the structuring and custom
+              Css for styling.
             </p>
             <div class="project-btn-grp">
               <button class="project-btn github" id="fooddelivery">
@@ -103,12 +104,16 @@
         </div>
 
         <div class="project-card">
-          <img src="img/project1.webp" class="project-img" alt="" />
+          <img
+            src="img/expense calculator reactJs_1.png"
+            class="project-img"
+            alt=""
+          />
           <div class="project-content">
-            <h1 class="project-title">React Blog Site</h1>
+            <h1 class="project-title">TRACKER</h1>
             <p class="project-info">
-              Built both the server and client side for this project using the
-              MERN Full Stack with mongoDb as the database
+              Implemented an expense tracker that calculates the expenses made
+              by a user. It was completed using ReactJs.
             </p>
             <div class="project-btn-grp">
               <button class="project-btn github" id="blogsite">
@@ -120,12 +125,16 @@
         </div>
 
         <div class="project-card">
-          <img src="img/project2.webp" class="project-img" alt="" />
+          <img
+            src="img/snackie React frontend_1.png"
+            class="project-img"
+            alt=""
+          />
           <div class="project-content">
-            <h1 class="project-title">React E-commerce web app</h1>
+            <h1 class="project-title">React SNACKIE</h1>
             <p class="project-info">
-              Built both the server and client side for this project using the
-              MERN Full Stack with mongoDb as the database
+              Built just the client side for this project while making use of
+              dummy data.
             </p>
             <div class="project-btn-grp">
               <button class="project-btn github" id="ecommerce">
@@ -137,13 +146,12 @@
         </div>
 
         <div class="project-card">
-          <img src="img/project1.webp" class="project-img" alt="" />
+          <img src="img/Blogy-blog ReactJs_1.png" class="project-img" alt="" />
           <div class="project-content">
-            <h1 class="project-title">project 01</h1>
+            <h1 class="project-title">MERN BLOG</h1>
             <p class="project-info">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit
-              vitae delectus cumque repudiandae aliquam optio accusamus natus
-              nobis! Nam, sunt?
+              Built both the server and client side for this project using the
+              MERN Full Stack with mongoDb as the databas
             </p>
             <div class="project-btn-grp">
               <button class="project-btn github" id="business_site">
@@ -157,13 +165,12 @@
         </div>
 
         <div class="project-card">
-          <img src="img/project2.webp" class="project-img" alt="" />
+          <img src="img/e-commerce Mern_1.png" class="project-img" alt="" />
           <div class="project-content">
-            <h1 class="project-title">project 01</h1>
+            <h1 class="project-title">E-COMMERCE</h1>
             <p class="project-info">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit
-              vitae delectus cumque repudiandae aliquam optio accusamus natus
-              nobis! Nam, sunt?
+              Built both the server and client side for this project using the
+              MERN Full Stack with mongoDb as the databas
             </p>
             <div class="project-btn-grp">
               <button class="project-btn github" id="toys">github repo</button>
@@ -176,25 +183,36 @@
 
     <!-- about section -->
     <section class="about-section active">
+      <h1 class="project-heading">About Me</h1>
       <div class="about">
         <div class="about-img-container">
           <img src="img/home.jpeg" class="about-img" alt="" />
           <button class="download-cv-btn">downlaod my cv</button>
         </div>
         <p class="about-info">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, est.
-          Velit, ex at totam praesentium nobis nisi accusamus debitis
-          consectetur corporis quos officiis beatae aspernatur dolor quia! Ea
-          iste dolores ipsa eligendi est, ad odio repellat numquam nostrum
-          distinctio a quos. Cupiditate labore officiis recusandae doloribus sit
-          reprehenderit eveniet vero dolores laboriosam, pariatur quos ipsam
-          explicabo consequuntur ipsa sunt alias rerum eligendi. Molestiae
-          cumque qui, odio, dignissimos quasi tempore assumenda voluptatem
-          praesentium veniam labore iusto ea. Maiores officia perferendis
-          consequuntur sapiente provident natus amet, tempora odit blanditiis
-          iste tempore sit at possimus quisquam ut veritatis. Libero nobis
-          aliquid ipsam ducimus a aut sit nihil quasi quam quas repudiandae
-          dolores sint esse repellendus eligendi praesentium.
+          I AM 'RESULT ORIENTED', But I am also a really fun person which makes
+          for a wonderful harmony of these two very important aspects of life.
+          Having started my journey in tech ( software engineering in particular
+          ) a little shy of two years now, I understand that there is so much
+          more to learn, to build and to achieve and this excites me a lot as I
+          look to keep moving forward and improving myself in this line of work.
+          I studied Law at Nnamdi Azikwe University, Awka, but decided to make a
+          career switch to software engineering because I believe strongly that
+          this is the future of the world and I do not wish to be left behind as
+          this new age is fully ushered in. This decision to make this career
+          change should tell you a bit about my resolve and determination in
+          achieving my objectives. Some months back I got enrolled in the
+          Hackathon '22 AfricaPlan Foundation Programme where I am being trained
+          as a MERN fullstack developer. I have been exposed to a great deal of
+          knowledge while working on a couple of capstone projects. Something
+          that I love about software development is the opportunity to work with
+          people from a wide range of disciplines as I absolutely relish this
+          and thrive in this environment. The software development lifecycle
+          involves working with so many different people and departments and, as
+          a people person and someone who loves to build new relationships, it
+          feels great to be able to come together with other workers who are
+          striving towards the same goal. I am always great to work with and I
+          get my tasks done before their deadlines
         </p>
       </div>
     </section>
@@ -205,7 +223,7 @@
       <div class="skills-container">
         <div class="skill-card">
           <img src="img/html.png" class="skill-img" alt="" />
-          <div class="skill-level">98%</div>
+          <div class="skill-level">85%</div>
           <h1 class="skill-name">HTML</h1>
           <p class="skill-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -215,8 +233,8 @@
 
         <div class="skill-card">
           <img src="img/html.png" class="skill-img" alt="" />
-          <div class="skill-level">98%</div>
-          <h1 class="skill-name">HTML</h1>
+          <div class="skill-level">85%</div>
+          <h1 class="skill-name">CSS</h1>
           <p class="skill-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Consequatur, delectus!
@@ -225,8 +243,8 @@
 
         <div class="skill-card">
           <img src="img/html.png" class="skill-img" alt="" />
-          <div class="skill-level">98%</div>
-          <h1 class="skill-name">HTML</h1>
+          <div class="skill-level">75%</div>
+          <h1 class="skill-name">JavaScript</h1>
           <p class="skill-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Consequatur, delectus!
@@ -235,8 +253,8 @@
 
         <div class="skill-card">
           <img src="img/html.png" class="skill-img" alt="" />
-          <div class="skill-level">98%</div>
-          <h1 class="skill-name">HTML</h1>
+          <div class="skill-level">73%</div>
+          <h1 class="skill-name">ReactJs</h1>
           <p class="skill-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Consequatur, delectus!
@@ -245,8 +263,8 @@
 
         <div class="skill-card">
           <img src="img/html.png" class="skill-img" alt="" />
-          <div class="skill-level">98%</div>
-          <h1 class="skill-name">HTML</h1>
+          <div class="skill-level">85%</div>
+          <h1 class="skill-name">NodeJs(ExpressJs)</h1>
           <p class="skill-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Consequatur, delectus!
@@ -255,8 +273,8 @@
 
         <div class="skill-card">
           <img src="img/html.png" class="skill-img" alt="" />
-          <div class="skill-level">98%</div>
-          <h1 class="skill-name">HTML</h1>
+          <div class="skill-level">90%</div>
+          <h1 class="skill-name">MongoDB</h1>
           <p class="skill-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Consequatur, delectus!
